# configuration-demo-backend

./: .gitignore  Makefile  README.md  crossplane.yaml  devbox.json
apis/: composition.yaml  definition.yaml
axum_demo/: Cargo.toml  Justfile  project.toml
axum_demo/src/: db.rs  handlers.rs  helpers.rs  main.rs  models.rs  router.rs  serialize.rs  templates.rs
axum_demo/tailwind/: package-lock.json  package.json  tailwind.config.js
axum_demo/templates/: index.html  styles.css  todo.html  todos.html
axum_demo/templates/error/: 404.html
axum_demo/templates/layout/: base.html  index.html
axum_demo/templates/partial/: footer.html  todo.html  todo_create.html  todo_update.html
axum_demo/templates/todos/: todos.html
examples/: claim.yaml
