[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
