[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
serde = { version = "1.0.208", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.39.3", features = ["full", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
